src/assets/style/service/service-invite-modal.scss
@import "~assets/style/vars";
@import "~assets/style/mixin";

.invite-modal {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 19.286em;
  height: 100%;
  max-height: 41.429em;
  margin: 3.571em 4.286em 2.143em 4em;
}

.invite-modal__body {
  display: flex;
  flex-direction: column;
  height: 100%;
  padding-bottom: 5.714em;
  > .createroom-user {
    flex: 1;
    margin-bottom: 0;
  }
}
.invite-modal__footer {
  position: relative;
  display: flex;
  width: 100%;
  height: 3em;
  > .profilelist {
    align-self: center;
    height: fit-content;
    min-height: auto;
    > .profilelist-user {
      margin-left: 0.857em;
      &:first-child {
        margin-left: 0;
      }
    }
  }
  .profilelist-user__expend {
    width: 2.143em;
    height: 2.143em;
    margin-left: 0.857em;
    line-height: 2.143em;
  }
  > .btn {
    position: absolute;
    top: 0;
    right: 0;
    width: 14.571em;
    height: 100%;
    padding: 0.714em 3.286em;
    font-weight: normal;
    font-size: 1.071em;
    line-height: 100%;
  }
}

.invite-modal_regist-image {
  width: fit-content;
  margin: 1.143em auto 2.857em;
  font-size: 0.929em;
  line-height: 1.571em;
}

.invite-modal__current {
  min-height: 6.429em;
  margin: 0.714em;
}

.invite-modal__current-title {
  display: flex;
  > p {
    margin-right: 0.357em;
    color: #d2d2d2;
    font-weight: 500;
    font-size: 1.143em;
  }
  .tooltip-guide {
    align-self: center;
    height: 100%;
  }
}
.invite-modal__current-list {
  display: flex;
  margin-top: 1.071em;
}

.invite-modal__current-user {
  width: fit-content;
  height: fit-content;
  margin-left: 0.429em;
  // border: solid 1px transparent;
  border-radius: 50%;
  &:first-child {
    margin-left: 0;
  }

  > .tooltip {
    width: 100%;
    height: 100%;
  }
}
.invite-modal__profile {
  position: relative;
}

.invite-modal__current-kickout {
  @include ir;
  position: absolute;
  right: 0;
  bottom: 0;
  width: 1.429em;
  height: 1.429em;
  background-color: #ff3939;
  border-radius: 50%;
  &:after {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 0.714em;
    height: 1px;
    background-color: #fff;
    transform: translate(-50%, -50%);
    content: "";
  }
}

.invite-modal__selected {
  min-height: 6.429em;
}
.invite-modal__selected-title {
  align-self: center;
  margin-right: 1.857em;
  color: #d2d2d2;
  > em {
    color: $color_primary_500;
  }
}
.invite-modal__selected-empty {
  min-height: 3.714em;
  font-size: 0.929em;
  opacity: 0.7;
}
.invite-modal__button {
  position: absolute;
  bottom: 0;
  width: 100%;
}

@include responsive-mobile {
  .service-mobile-inviteroom-modal {
    .fullscreen-modal--body {
      display: flex;
    }

    h1 {
      @include fontLevel(200);
      color: $new_color_text_main;
    }

    .createroom-user {
      height: 100%;
    }

    .btn.mobile-inviteroom__button {
      min-height: 4.8rem;
      margin: 0 1.6rem 1.6rem;
      color: $new_color_text_main;
      background-color: $new_color_bg_button_primary;
      border-radius: 0.4rem;
      @include fontLevel(200);
      &:disabled {
        opacity: 0.4;
      }
    }
  }

  .mobile-inviteroom__selected {
    position: relative;
    border-bottom: 6px solid $new_color_sub_border;

    .selected-header {
      display: flex;
      align-items: center;
      padding: 1.6rem;
      h1 {
        margin-right: 0.8rem;
        opacity: 0.8;
      }
      .selected-status {
        @include fontLevel(150);
        color: $new_color_text_blue;
      }
      .user-list-toggle-btn {
        position: absolute;
        top: 1.6rem;
        right: 2rem;
        width: 2.4rem;
        height: 2.4rem;
        background: url(~assets/image/ic_dropdown_20.svg) 50% no-repeat;
        background-size: 120%;
        transition: 0.3s;

        &.off {
          transform: rotate(180deg);
        }
      }
    }
    .profilelist {
      padding: 0 1rem 1.6rem 1.35rem;
      .profilelist-user {
        margin: 0 0.5rem;
      }
      .profilelist-user__image {
        margin: 0 0.85rem;
        overflow: visible;
      }
    }
  }
}

